[project]
name = "persona-forge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "pandas>=2.2.2",
    "pandas-stubs==2.2.3.250527",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.4",
    "torch>=2.3.1",
    "transformers>=4.41.0",
    "uvicorn>=0.30.1",
    "plotly>=5.22.0",
    "altair>=5.3.0",
    "starlette>=0.37.2",
    "numpy>=2.0",
    "pytz>=1.0",
    "ipython>=8.37.0",
    "langgraph>=0.2.51",
    "langchain-core>=0.3.26",
    "langchain-ollama>=0.2.1",
]

