[project]
name = "persona-forge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "pandas>=2.2.2",
    "pandas-stubs==2.2.3.250527",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.4",
    "torch~=2.7.1",
    "transformers~=4.53.3",
    "uvicorn>=0.30.1",
    "plotly>=5.22.0",
    "altair>=5.3.0",
    "starlette>=0.37.2",
    "numpy>=2.0",
    "pytz>=1.0",
    "ipython>=8.37.0",
    "langgraph>=0.2.51",
    "langchain-core>=0.3.26",
    "langchain-ollama>=0.2.1",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "duckdb>=1.3.2",
    "python-dotenv>=1.1.1",
    "fastmcp>=2.12.2",
    "omegaconf>=2.3.0",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "platformdirs>=4.4.0",
    "openai>=1.107.3",
    "sentence-transformers>=5.1.0",
    "gradio==5.47.1",
    "neo4j>=5.28.2",
    "ctranslate2>=4.6.0",
    "openai-whisper>=20250625",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "faster-whisper>=1.2.0",
    "e2b-code-interpreter==1.5.2",
]

